	  doc/texinfo/Makefile.am. (DLR)
- files.c:
  is_dir()
	- Don't assign dirptr's value using buf until we've asserted
	  that buf isn't NULL. (DLR)
	- Remove unneeded assert. (DLR)
- proto.h:
	- Add missing is_dir() prototype. (DLR)
- search.c:
  regexp_init()
	- Don't assign rc's value via regcomp() until we've asserted
	  that regexp_compiled is FALSE. (DLR)
- winio.c:
  do_credits()
	- Update the last copyright notice to include 2006. (DLR)
- README:
	- Add more miscellaneous cosmetic fixes. (DLR)
- m4/glib-2.0.m4:
	- Import the latest version of this file from glib 2.10.3. (DLR)
- doc/faq.html:
	- Update section 4.1 to describe how to open files with names
	  beginning with '+' at specified columns as well as lines.
	  (DLR)
- doc/man/fr/Makefile.am:
	- Set mandir before setting man_MANS, to more closely match
	  doc/man/Makefile.am. (DLR)
- doc/syntax/python.nanorc:
	- Improve string highlighting regexes. (Mike Frysinger)

GNU nano 2.0.2 - 2006.12.20
- General:
	- Miscellaneous comment fixes. (DLR)
- browser.c:
  do_browser()
	- Properly handle directories that contain nulls. (DLR)
- files.c:
  do_insertfile()
	- Properly handle filenames and executable commands that contain
	  nulls. (DLR)
  write_file()
	- Properly handle filenames that contain nulls. (DLR)
  do_writeout()
	- Fix a segfault when we can't get the full path of either the
	  filename we want to save under or the original filename. (DLR,
	  found by Mike Frysinger)
- nano.h:
	- Rename NANO_ALT_REPLACE_KEY to NANO_REPLACE_ALTKEY, for
	  consistency. (DLR)
	- Rename NANO_ALT_.* and NANO_.*ALTKEY to NANO_META_.* and
	  NANO_.*METAKEY, for consistency. (DLR)
- search.c:
  update_history()
	- Fix minor memory leak. (DLR)
- text.c:
  do_spell()
	- When setting i to the return value of write_(marked_)?file(),
	  use the "?" operator instead of an if/else clause. (DLR)
  do_verbatim_input()
	- Fix minor memory leak. (DLR)
- winio.c:
  parse_kbinput()
	- Add missing break. (DLR)